//
// Copyright 2018, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package javaclasses.exlibris;

import "spine/options.proto";

option (type_url_prefix) = "type.javaclasses.exlibris";
option java_package = "javaclasses.exlibris";
option java_outer_classname = "IdentifiersProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/net/email_address.proto";
import "javaclasses/exlibris/values.proto";

// An identifier of a book in library.
//
message BookId {

    // We generated book ID that contains ISBN code with the base62 algorithm.
    Isbn62 isbn62 = 1;
}

// An identifier of a user.
//
// An identifier is represented by user email address.
//
message UserId {

    // The user's e-mail.
    spine.net.EmailAddress email = 1;
}

// An identifier of the inventory.
//
// An identifier is represented by `BookId`.
//
message InventoryId {

    // An identifier of a book.
    BookId book_id = 1;
}

// An identifier of the inventory item.
//
// An identifier is represented by `BookId` and item number.
//
message InventoryItemId {

    // An identifier of a book.
    BookId book_id = 1;

    // The sequential number that entered by the librarian.
    int32 item_number = 2;
}

// An identifier of a loan.
//
// An identifier is based on a date of creation.
//
message LoanId {

    // An automatically generated identifier based on a date of creation.
    //
    // Maybe `currentTimeMillis`.
    int64 value = 1;
}
